--- a/chat.html
+++ b/chat.html
@@ -2,21 +2,24 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Sharcord - Chat</title>
+  <title>Sharcord Chat</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body class="dark">
   <div class="chat-container">
-    <header>
-      <h2>Sharcord Public Chat</h2>
-      <button onclick="toggleTheme()">Toggle Theme</button>
-    </header>
     <div id="chatBox" class="chat-box"></div>
-    <div class="input-row">
-      <input type="text" id="msgInput" placeholder="Type a message..." />
+
+    <div class="input-area">
+      <input type="file" id="fileInput" accept="image/*,.pdf,.doc,.txt" />
+      <button onclick="sendFile()">Send File</button>
+      <br />
+      <input type="text" id="msgInput" placeholder="Enter message..." />
       <button onclick="sendMessage()">Send</button>
     </div>
+
+    <button onclick="toggleTheme()">Toggle Theme</button>
   </div>
+
   <script src="/socket.io/socket.io.js"></script>
   <script src="client.js"></script>
 </body>
